<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    tools:context=".login.AccountDetailsFragment">

    <TextView
        android:id="@+id/dateJoinedHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="fill"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/dateJoined"
        app:layout_constraintStart_toStartOf="@+id/dateJoined"
        app:layout_constraintLeft_creator="@+id/dateJoined"
        android:text="@string/info_dateJoinedHeader" />

    <TextView
        android:id="@+id/dateJoined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/update_username"
        app:layout_constraintStart_toStartOf="@+id/update_username"
        android:text="@string/info_unknown" />

    <TextView
        android:id="@+id/totalHivesHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="fill"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/totalHives"
        app:layout_constraintStart_toStartOf="@id/dateJoinedHeader"
        android:text="@string/info_totalHives" />


    <TextView
        android:id="@+id/totalHives"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="@id/dateJoinedHeader"
        app:layout_constraintBottom_toTopOf="@id/dateJoinedHeader"
        android:text="@string/info_unknown" />


    <EditText
        android:id="@+id/update_username"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="@string/prompt_username"
        android:hint="@string/prompt_username"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="text" />

    <EditText
        android:id="@+id/update_firstname"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="@string/prompt_firstname"
        android:hint="@string/prompt_firstname"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_username" />

    <EditText
        android:id="@+id/update_secondname"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="@string/prompt_secondname"
        android:hint="@string/prompt_secondname"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_firstname" />

    <EditText
        android:id="@+id/update_email"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="@string/prompt_email"
        android:hint="@string/prompt_email"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_secondname"
        android:inputType="text" />

    <EditText
        android:id="@+id/update_password"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="@string/prompt_password"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_email" />

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="48dp"
        android:background="@color/colorAccent"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:stateListAnimator="@null"
        android:text="@string/button_update"
        android:textColor="#212121"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/update_password"
        tools:layout_editor_absoluteX="40dp" />

    <Button
        android:id="@+id/buttonDeleteAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="48dp"
        android:background="@color/colorAccent"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:stateListAnimator="@null"
        android:text="@string/button_delete_account"
        android:textColor="#212121"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/buttonUpdate"
        tools:layout_editor_absoluteX="40dp" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/update_secondname"
        app:layout_constraintStart_toStartOf="@+id/update_secondname"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />
</androidx.constraintlayout.widget.ConstraintLayout>